# pdf2mkdwn

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/assets/Untitled.icon/: icon.json
src/components/: FileList.tsx  FileUpload.tsx  Header.tsx  MarkdownPreview.tsx  ProcessingOptions.tsx  ProjectSidebar.tsx  index.ts
src/hooks/: usePDFProcessor.ts  useProjects.ts
src/services/: db.ts
src/types/: index.ts  markdown-plugins.d.ts
src/utils/: exportUtils.ts  layoutAnalyzer.ts  mathDetector.ts  pdfProcessor.ts  tableDetector.ts  textTransforms.ts  visionProcessor.ts
tests/: integration.test.html  layoutAnalyzer.test.ts  mathDetector.test.ts  runTests.ts  tableDetector.test.ts  textTransforms.test.ts  tsconfig.json  validateOutput.ts
tests/output/: sample_output.md
